Added spacing between projects on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,11 @@ body {
   max-width: 200px;
 }
 
+.projects .project-covid,
+.projects .project-stock {
+  margin-bottom: 2rem;
+}
+
 .projects .project-link {
   text-decoration: none;
 }
