--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Baloo Thambi 2", cursive;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Layout */
@@ -83,8 +83,8 @@ body {
 
 .navbar .button.say-hi {
   color: #fff;
-  background: #4299E1;
-  border: 2px solid #4299E1;
+  background: #4299e1;
+  border: 2px solid #4299e1;
   border-radius: 5px;
   padding: 0.25rem 0.75rem;
   text-decoration: none;
@@ -93,8 +93,8 @@ body {
 }
 
 .navbar .button.say-hi:hover {
-  color: #4299E1;
-  border: 2px solid #4299E1;
+  color: #4299e1;
+  border: 2px solid #4299e1;
   background: transparent;
 }
 
@@ -126,9 +126,10 @@ body {
 
 /* Description */
 .description {
-  background: #4299E1;
+  background: #4299e1;
   padding: 5rem 1.6rem;
   padding-bottom: 12rem;
+  font-family: 'Baloo Thambi 2', cursive;
 }
 
 .description .title {
@@ -145,6 +146,7 @@ body {
 .skills {
   margin-top: -14rem;
   padding-bottom: 1rem;
+  font-family: "Baloo Thambi 2", cursive;
 }
 
 .skills .panels {
@@ -170,12 +172,12 @@ body {
 }
 
 .skills .column .fas {
-  color: #4299E1;
+  color: #4299e1;
   font-size: 3rem;
 }
 
 .skills .skill-list-title {
-  color: #4299E1;
+  color: #4299e1;
   margin-top: 3rem;
   font-size: 1.2rem;
 }
@@ -184,8 +186,10 @@ body {
   padding: 0;
 }
 
+.languages,
 .skills ul li {
   list-style: none;
+  line-height: 1.6;
 }
 
 /* Projects */
@@ -215,10 +219,14 @@ body {
 .projects .project-link {
   text-decoration: none;
 }
+.project-text {
+  font-weight: 500;
+  font-family: "Baloo Thambi 2", cursive;
+}
 
 /* Footer */
 .footer {
-  background: #4299E1;
+  background: #4299e1;
   padding-bottom: 3rem;
 }
 
