Changed theme colors

--- a/css/default.css
+++ b/css/default.css
@@ -220,11 +220,11 @@ h6 {
 }
 
 #green-mode {
-  background-color: #78866b;
+  background-color: #147D64;
 }
 
 #purple-mode {
-  background-color: #7e4c74;
+  background-color: #34126F;
 }
 
 #settings-note {
