--- a/css/purple.css
+++ b/css/purple.css
@@ -1,6 +1,6 @@
 :root {
-  --mainColor: #46344e;
-  --secondaryColor: #382a3f;
+  --mainColor: #34126F;
+  --secondaryColor: #240754;
 
   --borderColor: #1d1520;
 
