--- a/css/green.css
+++ b/css/green.css
@@ -1,6 +1,6 @@
 :root {
-  --mainColor: #606b56;
-  --secondaryColor: #515a48;
+  --mainColor: #147d64;
+  --secondaryColor: #0c6b58;
 
   --borderColor: #161914;
 
@@ -9,8 +9,8 @@
 
   --themeDotBorder: #fff;
 
-  --previewBg: rgb(81, 90, 72, 0.8);
+  --previewBg: rgb(20, 123, 99, 0.8);
   --previewShadow: #2a2f25;
 
-  --buttonColor: #669966;
+  --buttonColor: #3ebd93;
 }
